--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,195 @@
+# =============================================================================
+# LiteDesk Multi-Instance CRM - Environment Configuration
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# Server Configuration
+# -----------------------------------------------------------------------------
 PORT=3000
-MONGO_URI="mongodb://localhost:27017/crmdb"  # Or your MongoDB Atlas connection string
-JWT_SECRET="6.6731011Kgnm2!"
+NODE_ENV=development
+
+# -----------------------------------------------------------------------------
+# Database Configuration
+# -----------------------------------------------------------------------------
+# Master Control Plane Database
+# For local development: No authentication (simpler for dev)
+# For production: Use authentication with admin/password
+MONGO_URI=mongodb://localhost:27017/litedesk
+
+# MongoDB Admin URI (for provisioning new instance databases)
+# Use this when creating new customer databases in production
+MONGODB_ADMIN_URI=mongodb://localhost:27017/admin
+
+# -----------------------------------------------------------------------------
+# Authentication & Security
+# -----------------------------------------------------------------------------
+JWT_SECRET=6.6731011Kgnm2!
+JWT_EXPIRE=7d
+
+REFRESH_TOKEN_SECRET=your_refresh_token_secret_change_in_production
+REFRESH_TOKEN_EXPIRE=30d
+
+# Master API Key for inter-service communication
+MASTER_API_KEY=your_master_api_key_change_in_production
+
+# -----------------------------------------------------------------------------
+# Monitoring Services
+# -----------------------------------------------------------------------------
+# Enable/disable background monitoring services
+ENABLE_HEALTH_CHECKER=true
+ENABLE_METRICS_COLLECTOR=true
+
+# Health check interval (in milliseconds) - default: 5 minutes
+HEALTH_CHECK_INTERVAL=300000
+
+# Metrics collection interval (in milliseconds) - default: 15 minutes
+METRICS_COLLECTION_INTERVAL=900000
+
+# -----------------------------------------------------------------------------
+# Multi-Instance Architecture
+# -----------------------------------------------------------------------------
+# Base domain for customer instances (e.g., customer.litedesk.com)
+BASE_DOMAIN=litedesk.local
+
+# Subdomain pattern: {slug}.litedesk.local or api-{slug}.litedesk.local
+# For local development, you can use .local or configure /etc/hosts
+
+# -----------------------------------------------------------------------------
+# AWS Configuration (for Production)
+# -----------------------------------------------------------------------------
+# Leave these empty for local development
+# Fill in when deploying to AWS
+
+# AWS Credentials
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+
+# Route 53 Configuration
+ROUTE53_HOSTED_ZONE_ID=
+
+# AWS SES (Email Service)
+AWS_SES_REGION=us-east-1
+FROM_EMAIL=noreply@litedesk.com
+
+# -----------------------------------------------------------------------------
+# Kubernetes Configuration (for Production)
+# -----------------------------------------------------------------------------
+# Path to kubeconfig file
+# For local development with Docker Desktop: ~/.kube/config
+# For production: Path to your EKS kubeconfig
+KUBECONFIG_PATH=
+
+# Kubernetes namespace prefix for customer instances
+KUBERNETES_NAMESPACE_PREFIX=litedesk-
+
+# Ingress LoadBalancer DNS (from ingress-nginx service)
+# Get this after installing ingress-nginx in your cluster
+INGRESS_LOADBALANCER_DNS=
+
+# -----------------------------------------------------------------------------
+# Stripe Payment Configuration (Optional)
+# -----------------------------------------------------------------------------
+# Leave empty for now, add when integrating payments
+STRIPE_SECRET_KEY=
+STRIPE_PUBLISHABLE_KEY=
+STRIPE_WEBHOOK_SECRET=
+
+# -----------------------------------------------------------------------------
+# Redis Configuration (Optional - for Bull Queue)
+# -----------------------------------------------------------------------------
+# Uncomment and configure if using Redis for background jobs
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+# REDIS_PASSWORD=
+
+# -----------------------------------------------------------------------------
+# Email Configuration (Optional)
+# -----------------------------------------------------------------------------
+# Configure when ready to send automated emails
+# EMAIL_SERVICE=ses
+# EMAIL_FROM=noreply@litedesk.com
+# EMAIL_REPLY_TO=support@litedesk.com
+
+# -----------------------------------------------------------------------------
+# File Storage (Optional)
+# -----------------------------------------------------------------------------
+# AWS S3 bucket for file uploads
+# S3_BUCKET_NAME=litedesk-files
+# S3_REGION=us-east-1
+
+# -----------------------------------------------------------------------------
+# Application URLs
+# -----------------------------------------------------------------------------
+# Master Control Plane URLs
+FRONTEND_URL=http://localhost:5173
+BACKEND_URL=http://localhost:3000
+
+# -----------------------------------------------------------------------------
+# Feature Flags
+# -----------------------------------------------------------------------------
+# Enable/disable features during development
+ENABLE_DEMO_CONVERSION=true
+ENABLE_INSTANCE_PROVISIONING=true
+ENABLE_EMAIL_NOTIFICATIONS=false
+ENABLE_STRIPE_INTEGRATION=false
+
+# -----------------------------------------------------------------------------
+# Logging & Debugging
+# -----------------------------------------------------------------------------
+# Log level: error, warn, info, debug
+LOG_LEVEL=info
+
+# Enable detailed logging for specific modules
+DEBUG_PROVISIONING=false
+DEBUG_KUBERNETES=false
+DEBUG_DATABASE=false
+DEBUG_DNS=false
+
+# -----------------------------------------------------------------------------
+# Rate Limiting
+# -----------------------------------------------------------------------------
+# API rate limiting (requests per window)
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# -----------------------------------------------------------------------------
+# Instance Defaults
+# -----------------------------------------------------------------------------
+# Default resource limits for new instances
+DEFAULT_INSTANCE_CPU=500m
+DEFAULT_INSTANCE_MEMORY=1Gi
+DEFAULT_INSTANCE_STORAGE=10Gi
+DEFAULT_INSTANCE_REPLICAS=2
+
+# Trial period in days
+TRIAL_PERIOD_DAYS=15
+
+# -----------------------------------------------------------------------------
+# Notes for Local Development
+# -----------------------------------------------------------------------------
+# For local testing without AWS/Kubernetes:
+# 1. Set NODE_ENV=development
+# 2. Use local MongoDB (mongodb://localhost:27017)
+# 3. Keep AWS/Kubernetes config empty
+# 4. Set ENABLE_INSTANCE_PROVISIONING=false to disable actual provisioning
+# 5. Use docker-compose for easy local setup
+
+# -----------------------------------------------------------------------------
+# Notes for Production Deployment
+# -----------------------------------------------------------------------------
+# Before deploying to production:
+# 1. Change all secrets (JWT_SECRET, REFRESH_TOKEN_SECRET, MASTER_API_KEY)
+# 2. Set NODE_ENV=production
+# 3. Configure AWS credentials
+# 4. Set up Route 53 hosted zone
+# 5. Configure Kubernetes cluster
+# 6. Set proper BASE_DOMAIN
+# 7. Enable SSL in ingress
+# 8. Set up monitoring and alerts
+# 9. Configure backup strategy
+# 10. Review and adjust resource limits
+
+# =============================================================================
+# End of Configuration
+# =============================================================================
