Updated RequestDemo Page
Updated tailwind on request demo page & re-orderd form fields
Added dialog after successful demo registration.

--- a/server/.env
+++ b/server/.env
@@ -14,7 +14,9 @@ NODE_ENV=development
 # Master Control Plane Database
 # For local development: No authentication (simpler for dev)
 # For production: Use authentication with admin/password
-MONGO_URI=mongodb://localhost:27017/litedesk
+# MONGO_URI=mongodb://localhost:27017/litedesk
+
+MONGO_URI=mongodb://admin:password123@localhost:27017/litedesk?authSource=admin
 
 # MongoDB Admin URI (for provisioning new instance databases)
 # Use this when creating new customer databases in production
