Checked for AWS SES

--- a/server/.env.example
+++ b/server/.env.example
@@ -63,11 +63,27 @@ ENABLE_HEALTH_CHECKER=false
 ENABLE_METRICS_COLLECTOR=false
 
 # -----------------------------------------------------------------------------
+# EMAIL CONFIGURATION (AWS SES)
+# -----------------------------------------------------------------------------
+# Get these from AWS Console: https://console.aws.amazon.com/ses/
+AWS_SES_REGION=us-east-1
+AWS_SES_ACCESS_KEY_ID=your_aws_access_key_id
+AWS_SES_SECRET_ACCESS_KEY=your_aws_secret_access_key
+EMAIL_FROM=noreply@yourdomain.com
+EMAIL_FROM_NAME=LiteDesk CRM
+EMAIL_REPLY_TO=support@yourdomain.com
+
+# Redis for email queue (optional but recommended)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# -----------------------------------------------------------------------------
 # FEATURES
 # -----------------------------------------------------------------------------
 ENABLE_DEMO_CONVERSION=true
 ENABLE_INSTANCE_PROVISIONING=false
-ENABLE_EMAIL_NOTIFICATIONS=false
+ENABLE_EMAIL_NOTIFICATIONS=true
 ENABLE_STRIPE_INTEGRATION=false
 
 # -----------------------------------------------------------------------------
