--- a/server/package.json
+++ b/server/package.json
@@ -11,16 +11,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.515.0",
     "@kubernetes/client-node": "^1.4.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "bull": "^4.12.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.19.1",
+    "nodemailer": "^6.9.8",
+    "redis": "^4.6.12",
     "yaml": "^2.8.1"
   }
 }
