--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/vue3": "^6.1.19",
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "gridstack": "^12.3.3",
     "pinia": "^2.3.1",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
