--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,10 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.19.1",
+    "multer": "^2.0.1",
     "nodemailer": "^6.9.8",
+    "pdfkit": "^0.15.0",
+    "exceljs": "^4.4.0",
     "redis": "^4.6.12",
     "yaml": "^2.8.1",
     "express-rate-limit": "^7.4.1"
